Updating web app, content cleaning and other fixes